<resources>
    <string name="app_name">Safe</string>

    <string name="main_tools_behavior">cc.xiaobaicz.safe.fragment.MainFragment$ToolsBehavior</string>
    <string name="account_detail">Account Detail</string>
    <string name="setting">Setting</string>
    <string name="safe">Safe</string>
    <string name="backup">Backup</string>
    <string name="about">About</string>
    <string name="set_password">Changed Password</string>
    <string name="set_password_tips">Changed Tips</string>
    <string name="auto_lock_time">Auto Locking</string>
    <string name="input_password">Password</string>
    <string name="info_config">Information</string>
    <string name="verify_fingerprint">Fingerprint</string>
    <string name="reset_password">Changed Password</string>
    <string name="reset_tips">Changed Tips</string>
    <string name="content_view_behavior">cc.xiaobaicz.safe.widget.ContentViewBehavior</string>
    <string name="tools_layer_behavior">cc.xiaobaicz.safe.fragment.MainFragment$ToolsLayerBehavior</string>
    <string name="recycle_view_behavior">cc.xiaobaicz.safe.fragment.MainFragment$RecyclerViewBehavior</string>
    <string name="hint_password">Password（Minimum length 6）</string>
    <string name="hint_password_confirm">Password Confirm</string>
    <string name="hint_password_tips">Tips</string>
    <string name="visits">Visits</string>
    <string name="create_time">Create Time</string>
    <string name="hint_domain">Domain</string>
    <string name="hint_account">Account</string>
    <string name="hint_detail_password">Password</string>
    <string name="hint_update_time">Update Time</string>
    <string name="ciphertext_import">Ciphertext Import（*.pw）</string>
    <string name="file_password">File Password</string>
    <string name="ciphertext_export">Ciphertext Export（*.pw）</string>
    <string name="plaintext_import">Plaintext Import（*.csv）</string>
    <string name="plaintext_export">Plaintext Export（*.csv）</string>
    <string name="plaintext_export_apple">Plaintext Export（*.csv）Apple</string>
    <string name="hint_password_tips2">Tips</string>
    <string name="hint_password_old">Password Old</string>
    <string name="snackbar_editable">Editable</string>
    <string name="snackbar_save_success">Save success</string>
    <string name="snackbar_save_faild">Save faild</string>
    <string name="snackbar_decrypt_faild">Decrypt faild</string>
    <string name="snackbar_encrypt_faild">Encrypt faild</string>
    <string name="snackbar_save_data">Save this data?</string>
    <string name="action_save">Save</string>
    <string name="action_back">Back</string>
    <string name="snackbar_delete">Delete this account?</string>
    <string name="action_delete">Detele</string>
    <string name="snackbar_cancel">Cancel this modifi?</string>
    <string name="action_cancel">Cancel</string>
    <string name="snackbar_import_success">Import success</string>
    <string name="snackbar_import_faild">Import faild</string>
    <string name="snackbar_export_success">Export success</string>
    <string name="snackbar_export_faild">Export failed</string>
    <string name="snackbar_double_click">Double click to exit</string>
    <string name="snackbar_account_empty">Account empty</string>
    <string name="snackbar_update_success">Update success</string>
    <string name="snackbar_update_faild">Update faild</string>
    <string name="snackbar_feedback">Feedback：xiaojinjincz@outlook.com</string>
    <string name="snackbar_verify_faild">Verification failed</string>
    <string name="dialog_title_verify">Verify identidy</string>
    <string name="dialog_subtitle_verify">Turn on password input after verification</string>
    <string name="dialog_action_exit">Exit</string>
    <string name="key_input_passwrod">input password</string>
    <string name="exception_file_not_found">File not found</string>
    <string name="exception_file_open_faild">File open failed</string>
    <string name="exception_save_faild">Save faild</string>
    <string name="exception_inconsistent_passwords">Inconsistent passwords</string>
    <string name="exception_verify_faild">wrong password</string>
    <string name="exception_password_empty">Password is not set</string>
    <string name="exception_resignin">Please log in again</string>
    <string name="exception_password_error">Passwords error</string>
    <string name="exception_passwords_match">Passwords do not match</string>
    <string name="hint_input_key">Input Key</string>
    <string name="biometric_error_no_hardware">No hardware biometric error</string>
    <string name="biometric_error_hw_unavailable">Biometric error hardware unavailable</string>
    <string name="biometric_error_none_enrolled">Biometric error not registered</string>
    <string name="lock">Permanently locked</string>
</resources>