<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:id="@+id/container"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:navigationIcon="@mipmap/icon_back"
        app:titleTextColor="@color/white"
        app:title="@string/safe">

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/btn_password"
                style="@style/item_setting">

                <TextView
                    style="@style/item_setting_text"
                    android:text="@string/set_password" />

                <ImageView
                    style="@style/item_setting_img"
                    app:tint="@color/tint_setting_img" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/btn_password_tips"
                style="@style/item_setting">

                <TextView
                    style="@style/item_setting_text"
                    android:text="@string/set_password_tips" />

                <ImageView
                    style="@style/item_setting_img"
                    app:tint="@color/tint_setting_img" />

            </FrameLayout>

            <FrameLayout
                style="@style/item_setting">

                <TextView
                    style="@style/item_setting_text"
                    android:text="@string/verify_fingerprint" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_fingerprint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/btn_lock_time"
                style="@style/item_setting">

                <TextView
                    style="@style/item_setting_text"
                    android:text="@string/auto_lock_time" />

                <EditText
                    android:id="@+id/et_lock_time"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@null"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:gravity="center_vertical|end"
                    android:textColor="@color/theme"
                    android:textSize="@dimen/tv_4"
                    android:hint="最少60秒"/>

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>