<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="cc.xiaobaicz.safe.model.ResetTipsViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:id="@+id/container">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:navigationIcon="@mipmap/icon_back"
            app:titleTextColor="@color/white"
            app:title="@string/reset_tips">

            <ImageView
                android:id="@+id/btn_save"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center_vertical|end"
                android:padding="12dp"
                android:src="@mipmap/icon_check"/>

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/content_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@mipmap/icon_tips"
                    app:startIconTint="@color/primary"
                    app:boxStrokeWidth="1px"
                    app:boxStrokeWidthFocused="1px">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_tips"
                        style="@style/input_info_config"
                        android:hint="@string/hint_password_tips2"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>